name:                wai-middleware-validation
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/wai-middleware-validation#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Wai.Middleware.Validation
                       Network.Wai.Middleware.Validation.Internal
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , filepath
                     , http-types
                     , insert-ordered-containers
                     , lens
                     , openapi3
                     , text
                     , wai
  default-language:    Haskell2010

test-suite wai-middleware-validation-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       Network.Wai.Middleware.ValidationSpec
                       Network.Wai.Middleware.Validation.InternalSpec
  hs-source-dirs:      test
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , here
                     , hspec
                     , http-types
                     , openapi3
                     , wai
                     , wai-extra
                     , wai-middleware-validation
  default-language:    Haskell2010

test-suite wai-middleware-validation-doctest
  type:                exitcode-stdio-1.0
  main-is:             doctest-driver.hs
  hs-source-dirs:      test/doctest
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , doctest
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/wai-middleware-validation
